Name:                Lattices
Version:             0.0.1
Category:            Math
Description:         A library for lattices, in particular computing an LLL reduced basis for a lattice
Author:              Bart Coppens
Maintainer:          Bart Coppens <kde@bartcoppens.be>
Build-Type:          Simple
Cabal-Version:       >=1.2

Source-Repository    head
  type:              git
  location:          git://github.com/bcoppens/Lattices.git


Library
  Build-Depends:
    base >= 4 && < 5,
    HaskellForMaths >= 0.4.0,
    array >= 0.3

  Exposed-modules:
    Math.LinearAlgebra.GramSchmidt
    Math.Lattices.LLL

  Hs-Source-Dirs: src

  ghc-options:       -w

Flag test
  Description: Build the test suite
  Default: False

Executable test
  Hs-Source-Dirs:  src, tests
  Main-Is:         TestSuite.hs

  Build-Depends:
    base >= 4 && < 5,
    HaskellForMaths >= 0.4.0,
    array >= 0.3,
    test-framework >= 0.4,
    test-framework-hunit >= 0.2,
    HUnit >= 1.2

  if !flag(test)
    buildable:     False
